# Periodical

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PRODUCT.md  README.md  SECURITY.md  TODO_issue_4.md  add_arrived_at_column.py  add_parental_leave_column.py  benchmark.sh  docker-compose.yml  migrate_absence.py  migrate_absence_add_off_type.py  migrate_absence_simplify.py  migrate_add_employment_transition.py  migrate_add_password_change.py  migrate_add_tax_table.py  migrate_overtime.py  migrate_person_history.py  migrate_rotation_eras.py  migrate_shift_swaps.py  migrate_to_db.py  migrate_vacation_fields.py  pyproject.toml  renovate.json  requirements.txt  test_performance.py  test_wage_history.py  worklog-2026-06-06.md
.github/: dependabot.yml
app/: main.py
data/: ob_rules.json  oncall_rules.json  persons.json  rotation.json  settings.json  shift_types.json  skattetabell2025.csv  skattetabell2026.csv  tax_brackets.json
deployment/: Dockerfile  README.md  docker-compose.yml  ica-schedule.service  nginx-example.conf  traefik.yml
docs/: CORS.md  FILE_PERMISSIONS.md  LOGGING.md  SENTRY.md  design-system-plan.md
migrations/: migrate_absence_add_hours.py  migrate_absence_add_type.py  migrate_add_api_key.py  migrate_add_calendar_token.py  migrate_add_employment_transition.py  migrate_add_language.py  migrate_add_login_attempts.py  migrate_add_ot_extension.py  migrate_add_password_change.py  migrate_add_shift_overrides.py  migrate_add_tax_table.py  migrate_add_wage_type.py  migrate_api_key_hashing.py  migrate_custom_rates.py  migrate_day_pay_overrides.py  migrate_overtime.py  migrate_person_history.py  migrate_rotation_eras.py  migrate_shift_swaps.py  migrate_substitute_account_link.py  migrate_substitute_ot_absence.py  migrate_to_db.py  migrate_user_seen_release.py  migrate_vacation_fields.py  migrate_vacation_saved.py  migrate_wage_history.py
scripts/: audit_vacation_saved.py  backup_database.sh  check_query_performance.py  check_wage_history.py  configure_prod_secret.sh  deploy.sh  dev.sh  release.sh  restore_database.sh  restore_db.sh  set_permissions.sh  setup_production.sh
tests/: conftest.py  test_absence_deduction.py  test_absence_position_swap.py  test_admin_router_gate.py  test_admin_settings_routes.py  test_admin_update_user.py  test_api.py  test_api_key_auth.py  test_api_v1_characterization.py  test_base_layout.py  test_breakdown_csv_export.py  test_calendar_export.py  test_calendar_feed.py  test_compute_day_ob_pay.py  test_core_helpers_validators.py  test_cors.py  test_cowork_employment_scoping.py  test_csrf.py  test_dashboard_week_summary.py  test_database_config.py  (+39 more)
(+114 files in other folders)
