[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "periodical"
# Keep in sync with the first entry of VERSIONS in app/routes/changelog.py,
# which is the authoritative version and what /health reports.
version = "1.3.0"
description = "Rotation scheduling and OB pay calculation"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "jinja2>=3.1.0",
    "sqlalchemy>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.3,<4.4",
    "python-jose[cryptography]>=3.3.0",
    # Direct dependency: Fernet encryption of API keys at rest (app/auth/auth.py)
    "cryptography>=42.0",
    "python-multipart>=0.0.6",
    "sentry-sdk[fastapi]>=1.40.0",
    "icalendar>=5.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    # Pin ruff so CI, local and pre-commit lint with the same rules (avoids version drift)
    "ruff==0.15.22",
    "pre-commit",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["B008"]  # Allow Depends() in function defaults (FastAPI pattern)

[tool.ruff.lint.per-file-ignores]
"app/core/translations.py" = ["E501"]  # Long strings in translation dicts are intentional
"app/routes/changelog.py" = ["E501"]  # Long strings in changelog entries are intentional

[tool.ruff.format]
quote-style = "double"
